css/vidl.css
/* ... */
@media screen and (max-width: 479px) {
  #w-node-b04e7e87-0098-6d7d-f614-aac806cb204f-a6d537f4 {
    grid-column-end: 5;
  }

  #w-node-_4a160153-4ab5-a9d3-8c4b-e486fbb5e59a-a6d537f4, #w-node-e79ceaf9-d9d3-b2a3-9d61-9737f32c63e8-a6d537f4, #w-node-e79ceaf9-d9d3-b2a3-9d61-9737f32c63f7-a6d537f4, #w-node-e79ceaf9-d9d3-b2a3-9d61-9737f32c6406-a6d537f4, #w-node-a34da09c-4c20-fdcf-773d-4325a8d73a9a-a6d537f4, #w-node-_966dd5a0-050d-d048-71ae-dca6ceb1bf49-a6d537f4 {
    grid-column-end: 6;
  }

  #w-node-_558f65ae-c5a6-337c-3246-c6560ba8bee7-a6d5388f {
    grid-column-end: 5;
  }

  #w-node-_558f65ae-c5a6-337c-3246-c6560ba8beee-a6d5388f {
    grid-row: 2 / 3;
    grid-column-start: 1;
  }

  #w-node-ad88eb45-8082-116c-fa36-c6fe36ed6c5d-a6d53894 {
    grid-column-end: 5;
  }

  #w-node-ad88eb45-8082-116c-fa36-c6fe36ed6c66-a6d53894 {
    grid-row: 2 / 3;
    grid-column-start: 1;
  }

  #w-node-b04e7e87-0098-6d7d-f614-aac806cb204f-465cac4c, #w-node-_40ac4cfc-1ae6-a8d1-7ce9-d88e1485382f-465cac4c {
    grid-column-end: 5;
  }

  #w-node-_40ac4cfc-1ae6-a8d1-7ce9-d88e14853838-465cac4c {
    grid-row: 2 / 3;
    grid-column-start: 1;
  }

  #w-node-b04e7e87-0098-6d7d-f614-aac806cb204f-108cf504 {
    grid-column-end: 5;
  }

  #w-node-_4a160153-4ab5-a9d3-8c4b-e486fbb5e59a-108cf504, #w-node-e79ceaf9-d9d3-b2a3-9d61-9737f32c63e8-108cf504, #w-node-e79ceaf9-d9d3-b2a3-9d61-9737f32c63f7-108cf504, #w-node-e79ceaf9-d9d3-b2a3-9d61-9737f32c6406-108cf504, #w-node-a34da09c-4c20-fdcf-773d-4325a8d73a9a-108cf504, #w-node-_966dd5a0-050d-d048-71ae-dca6ceb1bf49-108cf504 {
    grid-column-end: 6;
  }
}

